<resources>
    <string name="app_name">RepeatTimer</string>
    <string name="pause">一時停止</string>
    <string name="stop">停止</string>
    <string name="start">スタート</string>
    <string name="day_hour">%d日%02d時間</string>
    <string name="hour_minute_second">%d時間%02d分%02d秒</string>
    <string name="minute_second">%d分%02d秒</string>
    <string name="second_milli">%d秒%03d</string>
    <string name="second">%d秒</string>
    <string name="now_loading">…</string>
    <string name="notification_alarm_title">指定した時間に到達</string>
    <string name="notification_alarm_text">アラームを再度セットしましょう</string>
    <string name="zero_zero">00</string>
    <string name="hour_unit">時間</string>
    <string name="minute_unit">分</string>
    <string name="second_unit">秒</string>
</resources>
